--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -312,6 +312,19 @@
   timestamp = {2019.04.11},
 }
 
+@Article{Adams1992,
+  author    = {Adams, D. A. and Nelson, R. R. and Todd, P. A.},
+  title     = {Perceived Usefulness, Ease of Use, and Usage of Information Technology: A Replication},
+  journal   = {MIS Quarterly},
+  year      = {1992},
+  volume    = {16},
+  number    = {2},
+  pages     = {227},
+  doi       = {10.2307/249577},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @Article{Adams2002,
   author    = {Adams, B. and Dorai, C. and Venkatesh, S.},
   title     = {Toward automatic extraction of expressive elements from motion pictures: tempo},
@@ -1460,6 +1473,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.aaai.org/ocs/index.php/FSS/FSS10/paper/view/2305},
+}
+
+@Book{Allen2017,
+  title     = {The SAGE Encyclopedia of Communication Research Methods},
+  publisher = {Sage},
+  year      = {2017},
+  author    = {Allen, M.},
+  doi       = {10.4135/9781483381411},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Electronic{AllezCannes2022,
@@ -3528,6 +3551,16 @@
   timestamp = {2019.01.19},
 }
 
+@Book{Bakeman1997,
+  title     = {Observing Interaction: An Introduction to Sequential Analysis},
+  publisher = {Cambridge University Press},
+  year      = {1997},
+  author    = {Bakeman, R. and Gottman, J. M.},
+  doi       = {10.1017/cbo9780511527685},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @InCollection{Baker1996,
   author    = {Baker, M.},
   title     = {Corpus-Based Translation Studies: The challenges that lie ahead},
@@ -4144,6 +4177,19 @@
   owner     = {Vincent},
   timestamp = {2023.11.29},
   url       = {https://arxiv.org/abs/2203.12533},
+}
+
+@Article{Barnes1954,
+  author    = {Barnes, J. A.},
+  title     = {Class and Committees in a Norwegian Island Parish},
+  journal   = {Human Relations},
+  year      = {1954},
+  volume    = {7},
+  number    = {1},
+  pages     = {39-58},
+  doi       = {10.1177/001872675400700102},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Book{Barnes1972,
@@ -6364,6 +6410,20 @@
   doi       = {10.1007/978-1-4939-0959-9},
   owner     = {Vincent},
   timestamp = {2021.09.16},
+}
+
+@Article{Bikel1999,
+  author    = {Bikel, D. M. and Schwartz, R. and Weischedel, R. M.},
+  title     = {An Algorithm that Learns What's in a Name},
+  journal   = {Machine Learning},
+  year      = {1999},
+  volume    = {34},
+  number    = {1/3},
+  pages     = {211-231},
+  doi       = {10.1023/a:1007558221122},
+  owner     = {Vincent},
+  publisher = {Springer},
+  timestamp = {2025.02.06},
 }
 
 @TechReport{Bilenko2013,
@@ -11420,6 +11480,20 @@
   url         = {https://scholarbank.nus.edu.sg/handle/10635/16136},
 }
 
+@InCollection{Chen2007a,
+  author    = {Chen, S.-P. and Hsiang, J. and Tu, H.-C. and Wu, M.},
+  title     = {On Building a Full-Text Digital Library of Historical Documents},
+  booktitle = {International Conference on Asian Digital Libraries},
+  publisher = {Springer},
+  year      = {2007},
+  volume    = {4822},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {49-60},
+  doi       = {10.1007/978-3-540-77094-7_11},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @Article{Chen2008,
   author    = {Chen, C.-M.},
   title     = {Classification of scientific networks using aggregated journal-journal citation relations in the Journal Citation Reports},
@@ -11649,6 +11723,19 @@
   timestamp = {2023.08.11},
 }
 
+@Article{Chen2017a,
+  author    = {Chen, C.-M. and Tsay, M.-Y.},
+  title     = {Applications of collaborative annotation system in digital curation, crowdsourcing, and digital humanities},
+  journal   = {Electronic Library},
+  year      = {2017},
+  volume    = {35},
+  number    = {6},
+  pages     = {1122-1140},
+  doi       = {10.1108/el-08-2016-0172},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @InProceedings{Chen2017t,
   author    = {Chen, H. Y. and Zhou, E. and Choi, J. D.},
   title     = {Robust Coreference Resolution and Entity Linking on Dialogues: Character Identification on TV Show Transcripts},
@@ -11705,6 +11792,32 @@
   owner     = {Vincent},
   timestamp = {2020.12.17},
   url       = {https://www.isca-speech.org/archive/Interspeech_2019/pdfs/1614.pdf},
+}
+
+@Article{Chen2019a,
+  author    = {Chen, C.-M. and Chang, C.},
+  title     = {A Chinese ancient book digital humanities research platform to support digital humanities research},
+  journal   = {Electronic Library},
+  year      = {2019},
+  volume    = {37},
+  number    = {2},
+  pages     = {314-336},
+  doi       = {10.1108/el-10-2018-0213},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
+@Article{Chen2019b,
+  author    = {Chen, C.-M. and Chen, Y.-T. and Liu, C.-Y.},
+  title     = {Development and evaluation of an automatic text annotation system for supporting digital humanities research},
+  journal   = {Library Hi Tech},
+  year      = {2019},
+  volume    = {37},
+  number    = {3},
+  pages     = {436-455},
+  doi       = {10.1108/lht-10-2017-0219},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Article{Chen2019q,
@@ -11790,7 +11903,18 @@
   timestamp = {2024.06.24},
 }
 
-@Article{Chen2021a,
+@InProceedings{Chen2021h,
+  author    = {Chen, Y. and Ling, Z.-H. and Liu, Q.-F.},
+  title     = {A Neural-Network-Based Approach to Identifying Speakers in Novels},
+  booktitle = {Interspeech},
+  year      = {2021},
+  pages     = {4114-4118},
+  doi       = {10.21437/Interspeech.2021-609},
+  owner     = {Vincent},
+  timestamp = {2021.09.04},
+}
+
+@Article{Chen2021o,
   author    = {Chen, C.-M. and Chang, C. and Chen, Y.-T.},
   title     = {A character social network relationship map tool to facilitate digital humanities research},
   journal   = {Library Hi Tech},
@@ -11801,17 +11925,6 @@
   doi       = {10.1108/lht-08-2020-0194},
   owner     = {Vincent},
   timestamp = {2024.12.24},
-}
-
-@InProceedings{Chen2021h,
-  author    = {Chen, Y. and Ling, Z.-H. and Liu, Q.-F.},
-  title     = {A Neural-Network-Based Approach to Identifying Speakers in Novels},
-  booktitle = {Interspeech},
-  year      = {2021},
-  pages     = {4114-4118},
-  doi       = {10.21437/Interspeech.2021-609},
-  owner     = {Vincent},
-  timestamp = {2021.09.04},
 }
 
 @InProceedings{Chen2023,
@@ -15046,6 +15159,17 @@
   doi       = {10.1177/001872676702000207},
   owner     = {Vincent},
   timestamp = {2014.11.17},
+}
+
+@PhdThesis{Davis1986,
+  author    = {Davis, F. D.},
+  title     = {A Technology Acceptance Model for Empirically Testing New End-User Information Systems: Theory and Results},
+  school    = {Massachusetts Institute of Technology},
+  year      = {1986},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {http://hdl.handle.net/1721.1/15192},
 }
 
 @Article{Davis1989,
@@ -20392,6 +20516,16 @@
   timestamp = {2021.03.27},
 }
 
+@Book{Fishbein1975,
+  title     = {Belief, Attitude, Intention, and Behavior: An Introduction to Theory and Research},
+  publisher = {Addison-Wesley},
+  year      = {1975},
+  author    = {Fishbein, M. and Ajzen, I.},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://www.researchgate.net/publication/233897090},
+}
+
 @Article{Fisher1936,
   author    = {Fisher, R. A.},
   title     = {The Use of Multiple Measurements in Taxonomic Problems},
@@ -24997,6 +25131,18 @@
   url       = {https://dalspace.library.dal.ca/handle/10222/12829},
 }
 
+@Article{Gu2015,
+  author    = {Gu, C. and Tian, X.-P. and Yu, J.-D.},
+  title     = {Automatic Recognition of Chinese Personal Name Using Conditional Random Fields and Knowledge Base},
+  journal   = {Mathematical Problems in Engineering},
+  year      = {2015},
+  volume    = {2015},
+  pages     = {1-6},
+  doi       = {10.1155/2015/480879},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @InProceedings{Guerin2013,
   author    = {Guérin, C. and Rigaud, C. and Mercier, A. and Ammar-Boudjelal, F. and Bertet, K. and Bouju, A. and Burie, J.-C. and Louis, G. and Ogier, J.-M. and Revel, A.},
   title     = {eBDtheque: A Representative Database of Comics},
@@ -25415,6 +25561,19 @@
   doi       = {10.1017/cbo9781139173339},
   owner     = {Vincent},
   timestamp = {2022.07.08},
+}
+
+@Article{Ha2009,
+  author    = {Ha, S. and Stoel, L.},
+  title     = {Consumer e-shopping acceptance: Antecedents in a technology acceptance model},
+  journal   = {Journal of Business Research},
+  year      = {2009},
+  volume    = {62},
+  number    = {5},
+  pages     = {565-571},
+  doi       = {10.1016/j.jbusres.2008.06.016},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @InProceedings{Ha2015,
@@ -26407,6 +26566,17 @@
   url       = {https://global.oup.com/academic/product/shakespeare-and-literary-theory-9780199573387},
 }
 
+@InProceedings{Harris2014,
+  author    = {Harris, M. and Levene, M. and Zhang, D.},
+  title     = {The anatomy of a search and mining system for digital humanities},
+  booktitle = {14th ACM/IEEE-CS Joint Conference on Digital Libraries},
+  year      = {2014},
+  pages     = {165-168},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://dl.acm.org/doi/abs/10.5555/2740769.2740796},
+}
+
 @Electronic{Harrison2007,
   author       = {Harrison, C.},
   year         = {2007},
@@ -26497,6 +26667,17 @@
   owner     = {Vincent},
   timestamp = {2020.07.20},
   url       = {https://press.uchicago.edu/ucp/books/book/chicago/F/bo25144826.html},
+}
+
+@InProceedings{Haslhofer2013,
+  author    = {Haslhofer, B. and Robitza, W. and Guimbretiere, F. and Lagoze, C.},
+  title     = {Semantic tagging on historical maps},
+  booktitle = {5th Annual ACM Web Science Conference},
+  year      = {2013},
+  pages     = {148-157},
+  doi       = {10.1145/2464464.2464506},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Article{Hassabis2007,
@@ -28260,6 +28441,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Hong2011,
+  author    = {Hong, J.-C. and Hwang, M.-Y. and Hsu, H.-F. and Wong, W.-T. and Chen, M.-Y.},
+  title     = {Applying the technology acceptance model in a study of the factors affecting usage of the Taiwan digital archives system},
+  journal   = {Computers \& Education},
+  year      = {2011},
+  volume    = {57},
+  number    = {3},
+  pages     = {2086-2094},
+  doi       = {10.1016/j.compedu.2011.04.011},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @Article{Hong2016,
   author    = {Hong, M. and Jung, J. J.},
   title     = {{MyMovieHistory}: Social Recommender System by Discovering Social Affinities Among Users},
@@ -28697,6 +28891,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2207676.2208672},
   owner     = {Vincent},
   timestamp = {2022.07.08},
+}
+
+@Article{Hu1999,
+  author    = {Hu, P. J. and Chau, P. Y. K. and Sheng, O. R. L. and Tam, K. Y.},
+  title     = {Examining the Technology Acceptance Model Using Physician Acceptance of Telemedicine Technology},
+  journal   = {Journal of Management Information Systems},
+  year      = {1999},
+  volume    = {16},
+  number    = {2},
+  pages     = {91-112},
+  doi       = {10.1080/07421222.1999.11518247},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @InProceedings{Hu2004,
@@ -29351,6 +29558,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.wwnorton.com/books/webad.aspx?id=11125},
 }
 
+@Article{Hwang2013,
+  author    = {Hwang, G.-J. and Yang, L.-H. and Wang, S.-Y.},
+  title     = {A concept map-embedded educational computer game for improving students’ learning performance in natural science courses},
+  journal   = {Computers \& Education},
+  year      = {2013},
+  volume    = {69},
+  pages     = {121-130},
+  doi       = {10.1016/j.compedu.2013.07.008},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @InCollection{Hymes1972,
   author    = {Hymes, D. H.},
   title     = {On Communicative Competence},
@@ -29838,6 +30057,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.07},
   url       = {https://press.princeton.edu/titles/8767.html},
+}
+
+@Article{Jackson2016,
+  author    = {Jackson, C.},
+  title     = {Using Social Network Analysis to Reveal Unseen Relationships in Medieval Scotland},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2016},
+  volume    = {32},
+  number    = {2},
+  pages     = {fqv070},
+  doi       = {10.1093/llc/fqv070},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Article{Jacobs2019,
@@ -30697,6 +30929,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tvcg.2009.106},
   owner     = {Vincent},
   timestamp = {2020.08.11},
+}
+
+@InCollection{Jin2016,
+  author    = {Jin, G. T. and Chiu, W. Y. and Leong, Y. L. and Chen, P. Y. and Shan, M. K. and Liu, Q. F.},
+  title     = {Alternation of idea group on new youth (Xin Qingnian): a new digital humanities approach},
+  booktitle = {Digital Humanities: Between Past, Present and Future},
+  publisher = {National Taiwan University Press},
+  year      = {2016},
+  pages     = {427-463},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://asep.lib.cas.cz/arl-cav/en/detail/?&idx=cav_un_epca*0468800},
 }
 
 @Article{Jin2019,
@@ -31774,6 +32018,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.19},
 }
 
+@Article{Kallaher2017,
+  author    = {Kallaher, A. and Gamble, A.},
+  title     = {GIS and the humanities: Presenting a path to digital scholarship with the Story Map app},
+  journal   = {College \&amp; Undergraduate Libraries},
+  year      = {2017},
+  volume    = {24},
+  number    = {2-4},
+  pages     = {559-573},
+  doi       = {10.1080/10691316.2017.1327386},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @Article{Kalmijn1998,
   author    = {Kalmijn, M.},
   title     = {Intermarriage and Homogamy: Causes, Patterns, Trends},
@@ -32477,6 +32734,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {http://swepub.kb.se/bib/swepub:oai:DiVA.org:nai-104?vw=full&tab2=abs},
 }
 
+@MastersThesis{Kemell2016,
+  author    = {Kemell, K.-K.},
+  title     = {Technology acceptance of digital historical record database systems among historians},
+  school    = {University of Jyväskylä},
+  year      = {2016},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://jyx.jyu.fi/handle/123456789/52037},
+}
+
 @MastersThesis{Kemell2024,
   author      = {Kemell, T.},
   title       = {From literature to relationship network: Automated relationship extraction with a natural language processing pipeline for Resource constrained computers.},
@@ -32786,6 +33054,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqq011},
   owner     = {Vincent},
   timestamp = {2023.11.28},
+}
+
+@Article{Kestemont2017,
+  author    = {Kestemont, M. and De Gussem, J.},
+  title     = {Integrated Sequence Tagging for Medieval Latin Using Deep Representation Learning},
+  journal   = {Journal of Data Mining \& Digital Humanities},
+  year      = {2017},
+  volume    = {SI},
+  doi       = {10.46298/jdmdh.1398},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Article{Kestemont2022,
@@ -39164,6 +39443,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.04.03},
 }
 
+@InCollection{Liu2012,
+  author    = {Liu, J. S. and Ke, Y. E. and Chang, H. C. and Tan, H. W. and Huang, R. C. and Ning, K. C.},
+  title     = {Text analysis on overseas Taiwanese journals for political thought profiling},
+  booktitle = {Essential digital humanities: defining patterns and path},
+  publisher = {National Taiwan University Press},
+  year      = {2012},
+  pages     = {83-114},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://press.ntu.edu.tw/en/publish/show.php?act=book&refer=ntup_book00593},
+}
+
 @InProceedings{Liu2012k,
   author    = {Liu, Wei and Kan, Andrey and Chan, Jeffrey and Bailey, James and Leckie, Christopher and Pei, Jian and Kotagiri, Ramamohanarao},
   title     = {On compressing weighted time-evolving graphs},
@@ -40118,6 +40409,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1007/s11023-018-9478-1},
   owner     = {Vincent},
   timestamp = {2020.01.02},
+}
+
+@InProceedings{Luczak-Roesch2018b,
+  author    = {Luczak-Roesch, M. and Grener, A. and Fenton, E.},
+  title     = {Twenty Thousand Leagues Above the Book: An Interactive Visual Analytics Approach to Literature},
+  booktitle = {ACM Conference on Supporting Groupwork},
+  year      = {2018},
+  pages     = {94-97},
+  doi       = {10.1145/3148330.3154507},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Article{Luduea2013,
@@ -42013,6 +42315,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1109/eScience.2015.12},
   owner     = {Vincent},
   timestamp = {2018.10.27},
+}
+
+@InProceedings{Martin-Rodilla2016,
+  author    = {Martin-Rodilla, P. and Gonzalez-Perez, C.},
+  title     = {Understanding user behavior in textual analysis: a thinking aloud approach for digital humanities research contexts},
+  booktitle = {4th International Conference on Technological Ecosystems for Enhancing Multiculturality},
+  year      = {2016},
+  pages     = {269-276},
+  doi       = {10.1145/3012430.3012528},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @InProceedings{Martschat2014,
@@ -46649,6 +46962,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2023.01.09},
 }
 
+@Article{Neuroth2011,
+  author    = {Neuroth, H. and Lohmeier, F. and Smith, K. M.},
+  title     = {TextGrid – Virtual Research Environment for the Humanities},
+  journal   = {International Journal of Digital Curation},
+  year      = {2011},
+  volume    = {6},
+  number    = {2},
+  pages     = {222-231},
+  doi       = {10.2218/ijdc.v6i2.198},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @Book{Newcomb1961,
   title     = {The Acquaintance Process},
   publisher = {Holt, Rinehart, and Winston},
@@ -49492,6 +49818,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://proceedings.mlr.press/v28/pascanu13},
 }
 
+@Article{Pastorelli2017,
+  author    = {Pastorelli, D.},
+  title     = {A Classification of Manuscripts Based on A New Quantitative Method. The Old Latin Witnesses of John's Gospel as Text Case},
+  journal   = {Journal of Data Mining \& Digital Humanities},
+  year      = {2017},
+  volume    = {SI},
+  doi       = {10.46298/jdmdh.3783},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @Article{Pastor-Satorras2001,
   author    = {Pastor-Satorras, R. and Vazquez, A. and Vespignani, A.},
   title     = {Dynamical and correlation properties of the Internet},
@@ -50463,6 +50800,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2022.07.02},
   url       = {http://ceur-ws.org/Vol-2723/short8.pdf},
+}
+
+@InProceedings{Picca2017,
+  author    = {Picca, D. and Egloff, M.},
+  title     = {{DHTK}: the digital humanities ToolKit},
+  booktitle = {Workshop on Humanities in the Semantic Web},
+  year      = {2017},
+  volume    = {2014},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {81-86},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://ceur-ws.org/Vol-2014/paper-09.pdf},
 }
 
 @Article{Pichler2022,
@@ -56107,6 +56457,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.03.13},
 }
 
+@Article{Sato2016,
+  author    = {Sato, T. and Goto, M. and Kimura, F. and Maeda, A.},
+  title     = {Developing a collaborative annotation system for historical documents by multiple humanities researchers},
+  journal   = {International Journal of Computer Theory and Engineering},
+  year      = {2016},
+  volume    = {8},
+  number    = {1},
+  pages     = {88-93},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://www.ijcte.org/vol8/1025-C039.pdf},
+}
+
 @InProceedings{Satoh1997,
   author    = {Satoh, S. and Kanade, T.},
   title     = {Name-It: association of face and name in video},
@@ -57741,6 +58104,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1007/978-981-19-8669-7_21},
   owner     = {Vincent},
   timestamp = {2023.07.01},
+}
+
+@Book{Settles2012,
+  title     = {Active Learning},
+  publisher = {Springer},
+  year      = {2012},
+  author    = {Settles, B.},
+  series    = {Synthesis Lectures on Artificial Intelligence and Machine Learning},
+  doi       = {10.1007/978-3-031-01560-1},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Book{Sewell-Rutter2010,
@@ -60490,6 +60864,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1353/nlh.2004.0024},
   owner     = {Vincent},
   timestamp = {2024.06.01},
+}
+
+@Article{Steiner2014,
+  author    = {Steiner, C. M. and Agosti, M. and Sweetnam, M. S. and Hillemann, E.-C. and Orio, N. and Ponchia, C. and Hampson, C. and Munnelly, G. and Nussbaumer, A. and Albert, D. and Conlan, O.},
+  title     = {Evaluating a digital humanities research environment: the {CULTURA} approach},
+  journal   = {International Journal on Digital Libraries},
+  year      = {2014},
+  volume    = {15},
+  number    = {1},
+  pages     = {53–70},
+  doi       = {10.1007/s00799-014-0127-x},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @Article{Steiner2015,
@@ -64136,6 +64523,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2021.06.24},
 }
 
+@InProceedings{Uboldi2013,
+  author    = {Uboldi, G. and Caviglia, G. and Coleman, N. and Heymann, S. and Mantegari, G. and Ciuccarelli, P.},
+  title     = {Knot: an interface for the study of social networks in the humanities},
+  booktitle = {Biannual Conference of the Italian Chapter of SIGCHI},
+  year      = {2013},
+  pages     = {1-9},
+  doi       = {10.1145/2499149.2499174},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+}
+
 @InProceedings{Ueno2016,
   author    = {Ueno, M. and Mori, N. and Suenaga, T. and Isahara, H.},
   title     = {Estimation of structure of four-scene comics by convolutional neural networks},
@@ -65005,6 +65403,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1145/1374489.1374501},
   owner     = {Vincent},
   timestamp = {2020.08.13},
+}
+
+@Article{Vijayasarathy2004,
+  author    = {Vijayasarathy, L. R.},
+  title     = {Predicting consumer intentions to use on-line shopping: the case for an augmented technology acceptance model},
+  journal   = {Information \& Management},
+  year      = {2004},
+  volume    = {41},
+  number    = {6},
+  pages     = {747-762},
+  doi       = {10.1016/j.im.2003.08.011},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @InProceedings{Vilain1995,
@@ -67141,6 +67552,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2023.11.25},
   url       = {https://r4ds.hadley.nz/},
+}
+
+@InProceedings{Widlocher2015,
+  author    = {Widlocher, A. and Bechet, N. and Lecarpentier, J.-M. and Mathet, Y. and Roger, J.},
+  title     = {Combining Advanced Information Retrieval and Text-Mining for Digital Humanities},
+  booktitle = {ACM Symposium on Document Engineering},
+  year      = {2015},
+  pages     = {157-166},
+  doi       = {10.1145/2682571.2797067},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
 }
 
 @InProceedings{Wiebe1990,
@@ -69320,6 +69742,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2018.06.12},
 }
 
+@InProceedings{Yeh2017,
+  author    = {Yeh, W. C.},
+  title     = {Journal, gender and mobilization: social network analysis of ``women's resonance'' (1929-1944)},
+  booktitle = {8th International Conference of Digital Archives and Digital Humanities},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://www.aiecon.org/conference/DADH2017/resource/DADH_2017_program.pdf},
+}
+
 @InCollection{Yen1999,
   author    = {Yen, J. and Langari, R.},
   title     = {Fuzzy Logic: Intelligence, Control, and Information},
@@ -69487,6 +69919,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner       = {Vincent},
   timestamp   = {2025.01.13},
   url         = {https://www.lti.cs.cmu.edu/people/alumni/alumni-thesis/yoder-michael-miller-thesis.pdf},
+}
+
+@Article{Yohan2014,
+  author    = {Yohan, P. M. and Sasidhar, B. and Basha, S. A. H. and Govardhan, A. },
+  title     = {Automatic Named Entity Identification and Classification using Heuristic Based Approach for Telugu},
+  journal   = {International Journal of Computer Science Issues},
+  year      = {2014},
+  volume    = {11},
+  number    = {1},
+  pages     = {173-180},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://www.proquest.com/openview/dc2e02031fa0f435b0a4e4e846eb26b1/1?pq-origsite=gscholar&cbl=55228},
 }
 
 @Article{Yonelinas2019,
@@ -70665,6 +71110,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2019.03.29},
   url       = {https://dl.acm.org/citation.cfm?id=1273757},
+}
+
+@InCollection{Zhao2016,
+  author    = {Zhao, W.},
+  title     = {The application of social network analysis in modern Chinese historical novel: Li Jieren's Trilogy of Great Wave},
+  booktitle = {Digital Humanities: Between Past, Present and Future},
+  publisher = {National Taiwan University Press},
+  year      = {2016},
+  pages     = {398-426},
+  owner     = {Vincent},
+  timestamp = {2025.02.06},
+  url       = {https://asep.lib.cas.cz/arl-cav/en/detail/?&idx=cav_un_epca*0468800},
 }
 
 @Article{Zhao2017a,
